--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="items">
+<html>
 <head>
     <meta charset="UTF-8">
 	<title>Winyear Trading Inc.</title>
@@ -22,40 +22,30 @@
 		
 	</div>
 
+
 	<div class="about-us">
-		<img src="img/banner.png" >
+		<img src="img/banner.png">
 	</div>
 
-
-	<div id="items-list">
-		<ul id="items" ng-controller="ItemsController as items">
-			<li  class="col-sm-3 col-md-3" ng-repeat="ii in items.item" >
-			    <div class="thumbnail block-item">
-			     	<img src="img/index-photo/{{ii.photo}}" style="width: 300px; height: 310px;">
-				    <div class="caption">
-					    <h3 class="center">{{ii.name}}</h3>
-					    <span class="label label-warning">$</span> {{ii.rate}}</h4> 
-					    <p class="center">
-					    	<a href="#" class="btn btn-primary" role="button">Add to Cart</a> 
-					    	<a href="#" class="btn btn-default" role="button">More Info</a>
-					    </p>
-				    </div>
-				</div>
-			</li>
-		</ul>
+	<div class="select">
+		<button type="button" class="btn btn-default"><img src="img/btn-book.png" style="height: 120px; width: 170px;"> <p>Notebooks</p></button>
+		<button type="button" class="btn btn-default"><img src="img/btn-pen.png" style="height: 120px; width: 170px;"> <p>Pens</p></button>
+		<button type="button" class="btn btn-default"><img src="img/btn-cup.png" style="height: 120px; width: 170px;"> <p>Cups</p></button>
+		<button type="button" class="btn btn-default"><img src="img/btn-case.png" style="height: 120px; width: 170px;"> <p>Case</p></button>
+		<button type="button" class="btn btn-default"><img src="img/btn-other.png" style="height: 120px; width: 170px;"> <p>Others</p></button>
+		
 	</div>
 
+	<div id="blockcontent2" class="center">
+		<h2>Winyear Trading Inc.</h2>
+        <p>More than 20 years experience makes us clearly know how to satisfy customers' requirements of office supplies. In order to ensure the quality of our file holder, pencil sharpener, paper punch, paper cutter, file box, etc., Deli established its own research and development center. In addition to advance production and design technology, Deli also implements a strict quality control system, overseeing each step, from raw material to production lines. Our raw materials adopt imported Korean PP material, Germany ink and Switzerland nibs, etc. As a result, our office supplies have received ISO9001-2001 and ISO14001 certificates. They are commonly used in America, Japan, Germany, and the UK as well as many other parts of the world.</p>
 
+        <p>Deli Group is located in Ningbo, a port city of China. This location offers us convenient transportation and also contributes to our low product price. As an office supply manufacturer and wholesaler, Deli promises to provide you high quality and beautifully designed file holder, pencil sharpener and paper punch to customers. If you use Deli office supplies, you will be satisfied with your increased working efficiency. We look forward to cooperating with you! Thanks!</p>
+	</div>
 
     <footer class="footer-1">
             <p><a href="">Contact and Support</a>  |  http://han9369.github.io/rent  |  <a>简体中文</a>
     </footer>
-
-
-    <script src="js/angular.min.js"></script>
-	<script src="js/jquery-1.12.2.min.js"></script>
-	<script src="js/index.js"></script>
-	<script src="js/bootstrap.min.js"></script>
 
 </body>
 </html>
